<resources>
    <string name="app_name">Digital ID</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create">CREATE</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="loginhere">Already have an account? Login</string>
    <string name="fullname">Fullname</string>
    <string name="ic">IC number</string>
    <string name="birthdate">Date of Birth</string>
    <string name="address">Home Address</string>
    <string name="capture_image">Capture Image</string>
    <string name="next">Next</string>
    <string name="verifying">Verification in process...</string>
    <string name="personaldata">Personal Data</string>
    <string name="verifyaccount">Account Verification</string>
    <string name="logout">Logout</string>
    <string name="giveaccess">Give Access</string>
    <string name="logoutsuccess">Logged Out Successfully</string>
    <string name="yourinfo">Your Information</string>
    <string name="takeidphoto">Take ID Photo</string>
    <string name="scanqr">Scan to Access</string>
    <string name="result">Result</string>
    <string name="generate">Generate</string>
    <string name="ic_number">IC number</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="invalid_name">Fullname cannot be empty.</string>
    <string name="invalid_ic">IC number cannot be empty.</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="invalid_gender">Gender cannot be empty.</string>
    <string name="invalid_dob">Birthdate cannot be empty.</string>
    <string name="invalid_address">Home address cannot be empty.</string>

    <string-array name="gender">
        <item>M</item>
        <item>F</item>
    </string-array>
</resources>